# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: DOM.py  DOM_editors.py  cli.py  downloader.py  fs_handlers.py  logging.py  my_logging.py  name_editors.py  parser.py  request_handler.py  resources.py  response.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_download.py
tests/fixtures/: expected.py
