[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["devdenh <denisaminov74@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.2"
pytest-cov = "^2.11.1"
PyYAML = "^6.0"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"
requests = "^2.28.1"
pook = "^1.0.2"
beautifulsoup4 = "^4.11.1"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
