[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["devdenh <denisaminov74@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-cov = "^2.11.1"
PyYAML = "^6.0"
pytest-asyncio = "^0.18.3"
flake8 = "^5.0.4"
requests = "^2.28.1"
pook = "^1.0.2"
beautifulsoup4 = "^4.11.1"
requests-mock = "^1.9.3"
progress = "^1.6"
tldextract = "^3.3.1"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
